--- a/src/panelbarco/PanelBarcoFXML.fxml
+++ b/src/panelbarco/PanelBarcoFXML.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
+<AnchorPane id="AnchorPane" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
    <children>
       <TabPane layoutX="-1.0" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="50.0" tabMinWidth="200.0">
         <tabs>
@@ -131,7 +131,115 @@
           </Tab>
           <Tab text="DIRECCIÓN">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <GridPane prefHeight="422.0" prefWidth="800.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="222.4806365966797" minWidth="10.0" prefWidth="221.16058349609375" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.71978759765625" minWidth="10.0" prefWidth="244.83941650390625" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="333.3223571777344" minWidth="10.0" prefWidth="333.3223571777344" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <VBox prefHeight="211.0" prefWidth="218.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="Latitud:" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                       <font>
+                                          <Font name="System Bold" size="24.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets top="30.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <Label fx:id="textoLatitud1" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="LATº" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                       <font>
+                                          <Font name="System Bold" size="12.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets />
+                                       </VBox.margin>
+                                    </Label>
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="408.0" text="Longitud:">
+                                       <font>
+                                          <Font name="System Bold" size="24.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="textoLongitud1" alignment="CENTER" prefHeight="37.0" prefWidth="405.0" text="LONº">
+                                       <font>
+                                          <Font size="12.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets bottom="20.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <VBox prefHeight="211.0" prefWidth="218.0" GridPane.columnIndex="1">
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="HDG:" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                       <font>
+                                          <Font name="System Bold" size="48.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets bottom="10.0" top="50.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <Label fx:id="labelHDG1" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="PITCH" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                       <font>
+                                          <Font name="System Bold" size="36.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets bottom="50.0" top="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <VBox prefHeight="211.0" prefWidth="218.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="TWD:" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                       <font>
+                                          <Font name="System Bold" size="48.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets bottom="10.0" top="50.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <Label fx:id="labelTWD1" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                       <font>
+                                          <Font name="System Bold" size="36.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets bottom="50.0" top="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <VBox layoutX="232.0" layoutY="221.0" prefHeight="211.0" prefWidth="218.0" GridPane.rowIndex="1">
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="TWS:" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                       <font>
+                                          <Font name="System Bold" size="48.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets bottom="10.0" top="50.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <Label fx:id="labelTWS1" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                       <font>
+                                          <Font name="System Bold" size="36.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets bottom="50.0" top="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </GridPane>
+                     </children></AnchorPane>
             </content>
           </Tab>
             <Tab text="VIENTO">
