--- a/src/panelbarco/PanelBarcoFXML.fxml
+++ b/src/panelbarco/PanelBarcoFXML.fxml
@@ -93,7 +93,7 @@
                                           <Insets bottom="10.0" top="50.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <Label fx:id="labelTWD" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                    <Label fx:id="labelTWD_" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
                                        <font>
                                           <Font name="System Bold" size="36.0" />
                                        </font>
@@ -113,7 +113,7 @@
                                           <Insets bottom="10.0" top="50.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <Label fx:id="labelTWS" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                    <Label fx:id="labelTWS_" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
                                        <font>
                                           <Font name="System Bold" size="36.0" />
                                        </font>
@@ -244,7 +244,64 @@
           </Tab>
             <Tab text="VIENTO">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <GridPane prefHeight="422.0" prefWidth="800.0">
+                           <columnConstraints>
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="222.4806365966797" minWidth="10.0" prefWidth="221.16058349609375" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.71978759765625" minWidth="10.0" prefWidth="244.83941650390625" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="333.3223571777344" minWidth="10.0" prefWidth="333.3223571777344" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <VBox prefHeight="211.0" prefWidth="218.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                              <VBox prefHeight="211.0" prefWidth="218.0" GridPane.columnIndex="1" />
+                              <VBox prefHeight="211.0" prefWidth="218.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="TWD:" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                       <font>
+                                          <Font name="System Bold" size="48.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets bottom="10.0" top="50.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <Label fx:id="labelTWD" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                       <font>
+                                          <Font name="System Bold" size="36.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets bottom="50.0" top="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <VBox layoutX="232.0" layoutY="221.0" prefHeight="211.0" prefWidth="218.0" GridPane.rowIndex="1">
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="TWS:" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                       <font>
+                                          <Font name="System Bold" size="48.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets bottom="10.0" top="50.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <Label fx:id="labelTWS" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                       <font>
+                                          <Font name="System Bold" size="36.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets bottom="50.0" top="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                           </children>
+                        </GridPane>
+                     </children></AnchorPane>
               </content>
             </Tab>
         </tabs>
