--- a/src/panelbarco/PanelBarcoFXML.fxml
+++ b/src/panelbarco/PanelBarcoFXML.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
+<AnchorPane id="AnchorPane" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
    <children>
       <TabPane layoutX="-1.0" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="50.0" tabMinWidth="200.0">
         <tabs>
@@ -199,7 +199,7 @@
                               </VBox>
                               <VBox prefHeight="211.0" prefWidth="218.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <children>
-                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="TWD:" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="SOG:" textAlignment="CENTER" VBox.vgrow="NEVER">
                                        <font>
                                           <Font name="System Bold" size="48.0" />
                                        </font>
@@ -207,7 +207,7 @@
                                           <Insets bottom="10.0" top="50.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <Label fx:id="labelTWD1" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                    <Label fx:id="labelSOG" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
                                        <font>
                                           <Font name="System Bold" size="36.0" />
                                        </font>
@@ -219,7 +219,7 @@
                               </VBox>
                               <VBox layoutX="232.0" layoutY="221.0" prefHeight="211.0" prefWidth="218.0" GridPane.rowIndex="1">
                                  <children>
-                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="TWS:" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="COG:" textAlignment="CENTER" VBox.vgrow="NEVER">
                                        <font>
                                           <Font name="System Bold" size="48.0" />
                                        </font>
@@ -227,7 +227,7 @@
                                           <Insets bottom="10.0" top="50.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <Label fx:id="labelTWS1" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
+                                    <Label fx:id="labelCOG" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER" VBox.vgrow="NEVER">
                                        <font>
                                           <Font name="System Bold" size="36.0" />
                                        </font>
