--- a/src/panelbarco/PanelBarcoFXML.fxml
+++ b/src/panelbarco/PanelBarcoFXML.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
+<AnchorPane id="AnchorPane" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
    <children>
       <TabPane layoutX="-1.0" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="50.0" tabMinWidth="200.0">
         <tabs>
@@ -258,8 +258,6 @@
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                            </rowConstraints>
                            <children>
-                              <VBox prefHeight="211.0" prefWidth="218.0" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
-                              <VBox prefHeight="211.0" prefWidth="218.0" GridPane.columnIndex="1" />
                               <VBox prefHeight="211.0" prefWidth="218.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <children>
                                     <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="TWD:" textAlignment="CENTER" VBox.vgrow="NEVER">
@@ -297,6 +295,48 @@
                                        <VBox.margin>
                                           <Insets bottom="50.0" top="10.0" />
                                        </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0">
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="AWS:" textAlignment="CENTER">
+                                       <font>
+                                          <Font name="System Bold" size="48.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="labelAWS" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER">
+                                       <font>
+                                          <Font name="System Bold" size="36.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1">
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="AWA:" textAlignment="CENTER">
+                                       <font>
+                                          <Font name="System Bold" size="48.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="labelAWA" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER">
+                                       <font>
+                                          <Font name="System Bold" size="36.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2">
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="TEMP:" textAlignment="CENTER">
+                                       <font>
+                                          <Font name="System Bold" size="48.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="labelTEMP" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER">
+                                       <font>
+                                          <Font name="System Bold" size="36.0" />
+                                       </font>
                                     </Label>
                                  </children>
                               </VBox>
