--- a/src/panelbarco/PanelBarcoFXML.fxml
+++ b/src/panelbarco/PanelBarcoFXML.fxml
@@ -12,12 +12,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane id="AnchorPane" fx:id="root" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
    <children>
       <TabPane layoutX="-1.0" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="50.0" tabMinWidth="200.0">
         <tabs>
-          <Tab fx:id="tab1" text="EMBARCACIÓN">
+          <Tab fx:id="tab1">
             <content>
               <AnchorPane maxHeight="430.0" maxWidth="800.0" minHeight="414.0" minWidth="800.0" prefHeight="421.0" prefWidth="800.0">
                      <children>
@@ -130,8 +129,15 @@
                      </children>
                   </AnchorPane>
             </content>
+               <graphic>
+                  <Label styleClass="top" text="EMBARCACION">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+               </graphic>
           </Tab>
-          <Tab fx:id="tab2" text="DIRECCIÓN">
+          <Tab fx:id="tab2" styleClass="top">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -243,8 +249,15 @@
                         </GridPane>
                      </children></AnchorPane>
             </content>
+               <graphic>
+                  <Label text="GPS">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+               </graphic>
           </Tab>
-            <Tab fx:id="tab3" text="VIENTO">
+            <Tab fx:id="tab3" styleClass="top">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -345,6 +358,13 @@
                         </GridPane>
                      </children></AnchorPane>
               </content>
+               <graphic>
+                  <Label text="VIENTO">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+               </graphic>
             </Tab>
         </tabs>
       </TabPane>
