--- a/src/panelbarco/PanelBarcoFXML.fxml
+++ b/src/panelbarco/PanelBarcoFXML.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane id="AnchorPane" fx:id="root" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
    <children>
-      <TabPane layoutX="-1.0" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="50.0" tabMinWidth="200.0">
+      <TabPane layoutX="-1.0" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="50.0" tabMinWidth="175.0">
         <tabs>
           <Tab fx:id="tab1">
             <content>
@@ -368,9 +368,9 @@
             </Tab>
         </tabs>
       </TabPane>
-      <CheckBox fx:id="checkNocturno" alignment="CENTER" layoutX="650.0" layoutY="25.0" mnemonicParsing="false" onAction="#modoNocturno" text="MODO NOCTURNO">
+      <CheckBox id="check" fx:id="checkNocturno" alignment="CENTER" layoutX="574.0" layoutY="6.0" mnemonicParsing="false" onAction="#modoNocturno" prefHeight="49.0" prefWidth="222.0" text="MODO NOCTURNO">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </CheckBox>
    </children>
