--- a/src/panelbarco/noche.css
+++ b/src/panelbarco/noche.css
@@ -26,6 +26,11 @@ and open the template in the editor.
 	-fx-background-color: #293042;
 }
 
-.checkbox {
+#check {
 	-fx-text-fill: #F7F7F7;
+	-fx-background-color: #293042;
+}
+
+#AnchorPane {
+	-fx-background-color: #293042;
 }
