--- a/src/panelbarco/PanelBarcoFXML.fxml
+++ b/src/panelbarco/PanelBarcoFXML.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="root" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
+<AnchorPane id="AnchorPane" fx:id="root" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
    <children>
       <TabPane layoutX="-1.0" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="50.0" tabMinWidth="175.0">
         <tabs>
@@ -256,6 +256,9 @@
                                        <font>
                                           <Font name="System Bold" size="48.0" />
                                        </font>
+                                       <VBox.margin>
+                                          <Insets bottom="10.0" top="50.0" />
+                                       </VBox.margin>
                                     </Label>
                                     <Label fx:id="labelAWS" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER">
                                        <font>
@@ -273,6 +276,9 @@
                                        <font>
                                           <Font name="System Bold" size="48.0" />
                                        </font>
+                                       <VBox.margin>
+                                          <Insets bottom="10.0" top="50.0" />
+                                       </VBox.margin>
                                     </Label>
                                     <Label fx:id="labelAWA" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="ROLL" textAlignment="CENTER">
                                        <font>
@@ -286,7 +292,7 @@
                               </VBox>
                               <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2">
                                  <children>
-                                    <LineChart fx:id="lnTWS" title="TWS">
+                                    <LineChart fx:id="lnTWS" animated="false" createSymbols="false" horizontalGridLinesVisible="false" legendVisible="false" title="TWS">
                                       <xAxis>
                                         <CategoryAxis side="BOTTOM" />
                                       </xAxis>
@@ -294,12 +300,12 @@
                                         <NumberAxis side="LEFT" />
                                       </yAxis>
                                     </LineChart>
-                                    <Slider fx:id="slideTWS" blockIncrement="1.0" majorTickUnit="2.0" max="10.0" min="2.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" />
+                                    <Slider fx:id="slideTWS" blockIncrement="1.0" majorTickUnit="2.0" max="10.0" min="2.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
                                  </children>
                               </VBox>
                               <VBox prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                  <children>
-                                    <LineChart fx:id="lnTWD" title="TWD">
+                                    <LineChart fx:id="lnTWD" animated="false" createSymbols="false" horizontalGridLinesVisible="false" legendVisible="false" title="TWD">
                                       <xAxis>
                                         <CategoryAxis side="BOTTOM" />
                                       </xAxis>
@@ -307,7 +313,7 @@
                                         <NumberAxis side="LEFT" />
                                       </yAxis>
                                     </LineChart>
-                                    <Slider fx:id="slideTWD" blockIncrement="1.0" majorTickUnit="2.0" max="10.0" min="2.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" />
+                                    <Slider fx:id="slideTWD" blockIncrement="1.0" majorTickUnit="2.0" max="10.0" min="2.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" snapToTicks="true" />
                                  </children>
                               </VBox>
                            </children>
