--- a/src/panelbarco/PanelBarcoFXML.fxml
+++ b/src/panelbarco/PanelBarcoFXML.fxml
@@ -12,23 +12,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="root" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
+<AnchorPane id="AnchorPane" fx:id="root" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="panelbarco.PanelBarcoFXMLController">
    <children>
-      <TabPane layoutX="-1.0" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="50.0" tabMinWidth="175.0">
+      <TabPane id="fondoTab" layoutX="-1.0" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" tabClosingPolicy="UNAVAILABLE" tabMinHeight="50.0" tabMinWidth="175.0">
         <tabs>
           <Tab fx:id="tab1">
             <content>
               <AnchorPane maxHeight="430.0" maxWidth="800.0" minHeight="414.0" minWidth="800.0" prefHeight="421.0" prefWidth="800.0">
                      <children>
-                        <GridPane fx:id="grid1" prefHeight="422.0" prefWidth="800.0">
+                        <GridPane fx:id="grid1" layoutY="1.0" prefHeight="421.0" prefWidth="800.0">
                           <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="222.4806365966797" minWidth="10.0" prefWidth="221.16058349609375" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.71978759765625" minWidth="10.0" prefWidth="244.83941650390625" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="333.3223571777344" minWidth="10.0" prefWidth="333.3223571777344" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="418.5" minWidth="10.0" prefWidth="399.5" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="428.0" minWidth="10.0" prefWidth="400.0" />
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -75,6 +75,46 @@
                                     </Label>
                                  </children>
                               </VBox>
+                              <VBox layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="1">
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="PITCH:" textAlignment="CENTER">
+                                       <font>
+                                          <Font name="System Bold" size="48.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets top="50.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <Label fx:id="labelPitch" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="pitch" textAlignment="CENTER">
+                                       <font>
+                                          <Font name="System Bold" size="36.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets top="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <VBox layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <children>
+                                    <Label alignment="CENTER" prefHeight="44.0" prefWidth="402.0" text="ROLL:" textAlignment="CENTER">
+                                       <font>
+                                          <Font name="System Bold" size="48.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets top="50.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <Label fx:id="labelRoll" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="roll" textAlignment="CENTER">
+                                       <font>
+                                          <Font name="System Bold" size="36.0" />
+                                       </font>
+                                       <VBox.margin>
+                                          <Insets top="10.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
                            </children>
                         </GridPane>
                      </children>
@@ -92,11 +132,10 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <GridPane fx:id="grid2" prefHeight="422.0" prefWidth="800.0">
+                        <GridPane fx:id="grid2" prefHeight="422.0" prefWidth="801.0">
                            <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="222.4806365966797" minWidth="10.0" prefWidth="221.16058349609375" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="261.71978759765625" minWidth="10.0" prefWidth="244.83941650390625" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="333.3223571777344" minWidth="10.0" prefWidth="333.3223571777344" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="511.6082763671875" minWidth="10.0" prefWidth="402.1294860839844" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="408.00726318359375" minWidth="10.0" prefWidth="399.3705139160156" />
                            </columnConstraints>
                            <rowConstraints>
                               <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -110,7 +149,7 @@
                                           <Font name="System Bold" size="48.0" />
                                        </font>
                                        <VBox.margin>
-                                          <Insets top="30.0" />
+                                          <Insets top="50.0" />
                                        </VBox.margin>
                                     </Label>
                                     <Label fx:id="textoLatitud" alignment="CENTER" maxHeight="40.0" maxWidth="404.0" minHeight="40.0" minWidth="200.0" prefHeight="40.0" prefWidth="404.0" text="LATº" textAlignment="CENTER" VBox.vgrow="NEVER">
@@ -170,7 +209,7 @@
                                           <Font name="System Bold" size="48.0" />
                                        </font>
                                        <VBox.margin>
-                                          <Insets top="30.0" />
+                                          <Insets top="50.0" />
                                        </VBox.margin>
                                     </Label>
                                     <Label fx:id="textoLongitud" alignment="CENTER" prefHeight="37.0" prefWidth="405.0" text="LONº">
@@ -330,9 +369,10 @@
             </Tab>
         </tabs>
       </TabPane>
-      <CheckBox id="check" fx:id="checkNocturno" alignment="CENTER" layoutX="595.0" layoutY="6.0" mnemonicParsing="false" onAction="#modoNocturno" prefHeight="27.0" prefWidth="201.0" text="MODO NOCTURNO" AnchorPane.leftAnchor="595.0" AnchorPane.rightAnchor="4.0" AnchorPane.topAnchor="6.0">
+      <Pane id="fondoTop" layoutX="572.0" layoutY="6.0" prefHeight="52.0" prefWidth="228.0" AnchorPane.leftAnchor="572.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="6.0" />
+      <CheckBox id="check" fx:id="checkNocturno" alignment="CENTER" contentDisplay="CENTER" layoutX="575.0" layoutY="7.0" mnemonicParsing="false" onAction="#modoNocturno" prefHeight="45.0" prefWidth="220.0" text="MODO NOCTURNO" textAlignment="CENTER" textOverrun="CENTER_ELLIPSIS" AnchorPane.leftAnchor="575.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="7.0">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
          <padding>
             <Insets bottom="10.0" />
