--- a/src/panelbarco/noche.css
+++ b/src/panelbarco/noche.css
@@ -34,3 +34,7 @@ and open the template in the editor.
 #AnchorPane {
 	-fx-background-color: #293042;
 }
+
+#fondoTop {
+    -fx-background-color: #293042;
+}
